add langchain-message.py in without-apim

--- a/without-apim/.env.sample
+++ b/without-apim/.env.sample
@@ -4,3 +4,7 @@ AI_SEARCH_API_KEY=
 AOAI_SERVICE_NAME=
 AOAI_API_VERSION=
 AOAI_API_KEY=
+LANGCHAIN_AOAI_ENDPOINT=
+LANGCHAIN_AOAI_API_VERSION=
+LANGCHAIN_AOAI_DEPLOYMENT_NAME=
+LANGCHAIN_AOAI_API_KEY=
