add langchain-message.py in with-apim

--- a/with-apim/.env.sample
+++ b/with-apim/.env.sample
@@ -4,4 +4,8 @@ AI_SEARCH_API_KEY=
 APIM_BASE_URL_FOR_AOAI=
 AOAI_API_VERSION=
 AOAI_API_KEY=
+APIM_BASE_URL_FOR_LANGCHAIN_AOAI_ENDPOINT=
+LANGCHAIN_AOAI_API_VERSION=
+LANGCHAIN_AOAI_DEPLOYMENT_NAME=
+LANGCHAIN_AOAI_API_KEY=
 OCP_APIM_SUBSCRIPTION_KEY=
