--- a/without-apim/.env.sample
+++ b/without-apim/.env.sample
@@ -8,3 +8,10 @@ LANGCHAIN_AOAI_ENDPOINT=
 LANGCHAIN_AOAI_API_VERSION=
 LANGCHAIN_AOAI_DEPLOYMENT_NAME=
 LANGCHAIN_AOAI_API_KEY=
+LANGCHAIN_AOAI_EMBEDDING_DEPLOYMENT=
+LANGCHAIN_AOAI_EMBEDDING_ENDPOINT=
+LANGCHAIN_AOAI_EMBEDDING_API_KEY=
+LANGCHAIN_AOAI_EMBEDDING_API_VERSION=
+LANGCHAIN_AI_SEARCH_ENDPOINT=
+LANGCHAIN_AI_SEARCH_INDEX_NAME=
+LANGCHAIN_AI_SEARCH_API_KEY=
