add langchain files in with-apim

--- a/with-apim/.env.sample
+++ b/with-apim/.env.sample
@@ -8,4 +8,11 @@ APIM_BASE_URL_FOR_LANGCHAIN_AOAI_ENDPOINT=
 LANGCHAIN_AOAI_API_VERSION=
 LANGCHAIN_AOAI_DEPLOYMENT_NAME=
 LANGCHAIN_AOAI_API_KEY=
+APIM_BASE_URL_FOR_LANGCHAIN_AOAI_EMBEDDING_ENDPOINT=
+LANGCHAIN_AOAI_EMBEDDING_DEPLOYMENT=
+LANGCHAIN_AOAI_EMBEDDING_API_KEY=
+LANGCHAIN_AOAI_EMBEDDING_API_VERSION=
+APIM_BASE_URL_FOR_LANGCHAIN_AI_SEARCH_ENDPOINT=
+LANGCHAIN_AI_SEARCH_API_KEY=
+LANGCHAIN_AI_SEARCH_INDEX_NAME=
 OCP_APIM_SUBSCRIPTION_KEY=
