add ai document intelligence in without-apim

--- a/without-apim/.env.sample
+++ b/without-apim/.env.sample
@@ -1,3 +1,5 @@
+AI_DOCUMENT_INTELLIGENCE_ENDPOINT=
+AI_DOCUMENT_INTELLIGENCE_API_KEY=
 AI_SEARCH_SERVICE_NAME=
 AI_SEARCH_INDEX_NAME=
 AI_SEARCH_API_KEY=
