add ai document intelligence in with-apim

--- a/with-apim/.env.sample
+++ b/with-apim/.env.sample
@@ -1,3 +1,5 @@
+APIM_BASE_URL_FOR_AI_DOCUMENT_INTELLIGENCE=
+AI_DOCUMENT_INTELLIGENCE_API_KEY=
 APIM_BASE_URL_FOR_AI_SEARCH=
 AI_SEARCH_INDEX_NAME=
 AI_SEARCH_API_KEY=
